--- a/publiccms-parent/publiccms/src/main/resources/cms.properties
+++ b/publiccms-parent/publiccms/src/main/resources/cms.properties
@@ -1,4 +1,4 @@
-cms.filePath=/data/publiccms
+cms.filePath=F:/Workspaces/public-cms/data/publiccms/
 cms.masterSiteIds=1
 cms.defaultSiteId=1
 cms.tokenizerFactory=hmmchinese
