--- a/publiccms-parent/publiccms/src/main/resources/config/database-other.properties
+++ b/publiccms-parent/publiccms/src/main/resources/config/database-other.properties
@@ -1,4 +1,4 @@
-jdbc.url=jdbc\:mysql\://192.168.0.66/other?useUnicode\=true&characterEncoding\=UTF-8&zeroDateTimeBehavior\=round&useSSL\=false
+jdbc.url=jdbc\:mysql\://192.168.0.66/publiccms?useUnicode\=true&characterEncoding\=UTF-8&zeroDateTimeBehavior\=round&useSSL\=false
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.username=ytain
 jdbc.password=12345
