--- a/publiccms-parent/publiccms/src/main/resources/cms.properties
+++ b/publiccms-parent/publiccms/src/main/resources/cms.properties
@@ -1,4 +1,4 @@
-cms.filePath=F:/Workspaces/public-cms/data/publiccms/
+cms.filePath=F:/Workspaces/public-cms/publiccms-parent/publiccms/webapp/publiccms/data/
 cms.masterSiteIds=1
 cms.defaultSiteId=1
 cms.tokenizerFactory=hmmchinese
@@ -12,7 +12,7 @@ cms.proxy.configFilePath=config/proxy.properties
 #cms.hibernate.configFilePath=config/hibernate-oracle.properties
 #cms.hibernate.configFilePath=config/hibernate-oracle-redis.properties
 cms.hibernate.configFilePath=config/hibernate.properties
-#cms.cache.configFilePath=config/cache-redis.properties
+#####cms.cache.configFilePath=config/cache-redis.properties
 cms.cache.configFilePath=config/cache.properties
 cms.freemarker.configFilePath=config/freemarker.properties
 cms.methodRemoveRegex=Method
